# KawaiiMq

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Consumer.cpp.D0B98B87934E6A8B.idx  Consumer.h.2CE5BF00EECDE9AD.idx  Exceptions.cpp.A7DBCF238726021A.idx  Exceptions.h.0D7671431C672BF6.idx  Message.h.9738474DFFF9B487.idx  MessageQueueManager.cpp.5DBBCFCDEE629771.idx  MessageQueueManager.h.54DFA0B62F81E50C.idx  Producer.cpp.8A912CCAA52897EA.idx  Producer.h.C21C9C6C769D1143.idx  Queue.cpp.A292F3A72A4A7170.idx  Queue.h.D8336189E388D174.idx  Topic.cpp.74A1618BC6C74208.idx  Topic.h.3F497A38C8507516.idx
.github/workflows/: main.yml
doc/: config  examples.md
include/KawaiiMQ/: Client.h  Consumer.h  Consumer.hpp  Exceptions.h  IMessage.h  IMessage.hpp  Message.h  MessageQueueManager.h  MessageQueueManager.hpp  Producer.h  Producer.hpp  Queue.h  Queue.hpp  Topic.h  kawaiiMQ.h  utility.hpp
include/messageQueue/: Client.h  IClient.h  IMessage.h  MessageQueueManager.h  MessageQueueManager.hpp  Queue.h  Queue.hpp  Topic.h
include/message_queue/: IMessage.h  message_queue.h  utility.hpp
scripts/: cleanDoc.sh  makeDoc.sh  remakeDoc.sh
src/: Client.cpp  Consumer.cpp  Exceptions.cpp  Message.cpp  MessageQueueManager.cpp  Producer.cpp  Queue.cpp  Topic.cpp  library.cpp
src/UnitTest/: ManagerTest.cpp  QueueTest.cpp
src/test/: ManagerTest.cpp  QueueTest.cpp
src/test/ManagerTest/: ManagerTest.cpp
src/test/OperatorTest/: OperatorTest.cpp  ProducerConsumerTest.cpp
src/test/QueueTest/: QueueTest.cpp
